tests/old_invalid/wrong_from.stderr
error[E0277]: the trait bound `CustomType<'_>: From<&String>` is not satisfied
  --> $DIR/wrong_from.rs:11:1
   |
11 | unsync_once_self_cell!(WrongFromCell, String, CustomType<'_>,);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `From<&String>` is not implemented for `CustomType<'_>`
   |
   = help: the following implementations were found:
             <CustomType<'a> as From<&'a i32>>
   = note: required because of the requirements on the impl of `Into<CustomType<'_>>` for `&String`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
